# agentic-ai-course-submissions

./: README.md  _config.yml  index.md
_posts/: 2026-06-20-week3-human‑in‑the‑loop-(hitl)-gating-for-llm-output.md
week1/: README.md  demo_checking.csv  demo_credit_card.csv  demo_savings.csv  fintrack-PRD.md  fintrack-course-submission.md  fintrack-v0.jsx
week2/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
week2/app/: streamlit_app.py
week2/config/: settings.py
week2/data/base_corpus/: Fulton_County_Zoning_FloodZone.md  Fulton_County_Zoning_FloodZone.meta.json  GA_PAR_Purchase_Agreement_2026.md  GA_PAR_Purchase_Agreement_2026.meta.json  Maplewood_HOA_Bylaws.md  Maplewood_HOA_Bylaws.meta.json
week2/data/user_contracts/: Sample_Executed_Purchase_Agreement.md  Sample_Executed_Purchase_Agreement.meta.json
week2/eval/: dataset.py  debug_eval.py  debug_eval_results.md  ragas_eval.py  refusal_eval.py  tune.py  tuning_progress.md  tuning_results.json
week2/graph/: build.py  state.py
week2/graph/nodes/: reranker.py  router.py
week2/ingest/: batch_base_corpus.py  embed.py  ingest_user_contract.py  parse.py
week2/tests/: test_dates.py  test_gate.py
week2/utils/: dates.py
week3/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt  techspec.md
week3/agent/: __init__.py  build.py  state.py
week3/agent/nodes/: critic.py  generator.py  human_gate.py  ingest_node.py  planner.py  publisher.py  retriever.py
week3/app/: content_agent_app.py
week3/config/: settings.py
week3/githubpages/: 2026-06-20-week2-recursive---multi‑hop-retrieval.md
week3/graph/nodes/: escalation.py  gate.py  generator.py  retriever.py
week3/ingest/: chunk.py  clean.py  embed.py  metadata.py
week3/memory/: post_log.py
week3/stores/: bm25_index.py  create_index.py  pinecone_client.py
week3/tests/: conftest.py  test_chunk_clean.py  test_deadline_scoping.py  test_escalation.py  test_generator_dates.py  test_metadata.py  test_retrieval_scoring.py  test_router.py  test_tune_helpers.py
week3/tools/: fetch_github.py  publish_github.py
