[project]
name = "build-in-public-content-agent"
version = "0.1.0"
description = "Build-in-Public Content Agent — agentic pipeline (LangChain + LangGraph) that turns weekly course materials and project work into approved LinkedIn and blog posts."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Utthra" }]

dependencies = [
    # Orchestration
    "langchain>=0.2",
    "langgraph>=0.2",
    # Models / providers (Nebius is OpenAI-compatible)
    "openai>=1.30",
    # Vector + sparse retrieval
    "pinecone-client>=3.0,<6.0",
    "rank-bm25>=0.2.2",
    # PDF parsing
    "llama-parse>=0.4",
    # Frontend
    "streamlit>=1.35",
    # Pin uvicorn below 0.30 — Streamlit's shutdown handler expects Server.servers
    # which was removed in uvicorn 0.30.0, causing an AttributeError on Ctrl+C.
    "uvicorn<0.30",
    # HTTP client for GitHub API
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.uv]
package = false
